Adds measurements for Java 1.8.